--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
 
 main {
 	width: 100%;
+	height: 100%;
 }
 
 h1 {
@@ -61,11 +62,13 @@ i {
 }
 
 .contact {
-	text-align: center;
+	position: relative;
+	top: 52%;
+	left: 58%;
 }
 
 .icon-links {
-	margin-left: auto;
-	margin-right: auto;
-	width: 250px;
+	position: relative;
+	top: 50%;
+	left: 55%;
 }
