--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,59 @@ i {
 	top: 50%;
 	left: 55%;
 }
+
+@media only screen and (max-width: 600px) {
+	h1 {
+		font-size: 2.5em;
+		color: black;
+	}
+
+	p {
+		font-size: 2em;
+		color: black;
+	}
+
+	h4 {
+		font-size: 1.5em;
+	}
+
+	.contact {
+		position: relative;
+		top: 52%;
+		left: 45%;
+	}
+
+	.icon-links {
+		position: relative;
+		top: 50%;
+		left: 40%;
+	}
+}
+
+@media only screen and (min-width: 1000px) {
+	h1 {
+		font-size: 2.25em;
+		color: black;
+	}
+
+	p {
+		font-size: 1.5em;
+		color: black;
+	}
+
+	h4 {
+		font-size: 1.25em;
+	}
+
+	.contact {
+		position: relative;
+		top: 52%;
+		left: 45%;
+	}
+
+	.icon-links {
+		position: relative;
+		top: 50%;
+		left: 40%;
+	}
+}
