--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,21 @@
 body {
 	font-family: "Inter", sans-serif;
 	color: black;
-	width: 100%;
+	width: auto;
 	margin: 0px;
 	overflow-x: hidden;
 }
 
 h1 {
+	font-size: 3em;
+}
+
+h4 {
 	font-size: 2em;
-	color: black;
 }
 
 p {
-	font-size: 1em;
-	color: black;
+	font-size: 2em;
 }
 
 a {
@@ -78,8 +80,7 @@ i {
 	}
 
 	p {
-		font-size: 2em;
-		color: black;
+		font-size: 1em;
 	}
 
 	h4 {
@@ -89,7 +90,8 @@ i {
 	.contact {
 		position: relative;
 		top: 52%;
-		left: 45%;
+		left: 70%;
+		font-size: 2.25em;
 	}
 
 	.icon-links {
@@ -99,19 +101,18 @@ i {
 	}
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (max-width: 1000px) {
 	h1 {
-		font-size: 2.25em;
+		font-size: 3.25em;
 		color: black;
 	}
 
 	p {
 		font-size: 1.5em;
-		color: black;
 	}
 
 	h4 {
-		font-size: 1.25em;
+		font-size: 2em;
 	}
 
 	.contact {
