--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
 	box-sizing: border-box;
+	overflow-x: hidden;
 }
 
 body {
@@ -7,7 +8,7 @@ body {
 	color: black;
 	width: auto;
 	margin: 0px;
-	overflow-x: hidden;
+	overflow-x: inherit;
 }
 
 h1 {
